UI: MyPage ui base
마이페이지 fragment ui 토대 현재 디자인까지 완성, 완독 책 몰아보기 탭의 경우에는 방식에 추가 논의 필요함

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="colorMainBg">#0F0F10</color>
     <color name="colorLabelNormal">#F7F7F8</color>
     <color name="colorLabelAlternative">#AEB0B6</color>
+
+    <color name="characterStatusGrey">#BCBABA</color>
+    <color name="myPageScrapBg">#F6F6F6</color>
 </resources>
