--- a/app/src/main/res/layout/activitiy_bookclub_book.xml
+++ b/app/src/main/res/layout/activitiy_bookclub_book.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/fragment_container">
 
     <TextView
         android:id="@+id/bookclub_book_title_tv"
