--- a/app/src/main/res/layout/fragment_bookclub_book_home.xml
+++ b/app/src/main/res/layout/fragment_bookclub_book_home.xml
@@ -1,73 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/bookclub_book_home_members_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:text="북클럽 멤버"
-        android:textSize="16sp"
-        android:textColor="@color/colorLabelNormal"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="43dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <!-- 기존의 ConstraintLayout을 유지합니다 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/bookclub_book_home_members_rv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        android:layout_marginStart="14dp"
-        android:paddingEnd="20dp"
-        android:clipToPadding="false"
-        app:layout_constraintTop_toBottomOf="@+id/bookclub_book_home_members_tv"
-        app:layout_constraintStart_toStartOf="parent"
-        android:orientation="horizontal"
-        />
+        <TextView
+            android:id="@+id/bookclub_book_home_members_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:text="북클럽 멤버"
+            android:textSize="16sp"
+            android:textColor="@color/colorLabelNormal"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="43dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/bookclub_book_home_month_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1월 북클럽"
-        android:textSize="16sp"
-        android:textColor="@color/colorLabelNormal"
-        android:layout_marginTop="71dp"
-        app:layout_constraintTop_toBottomOf="@+id/bookclub_book_home_members_rv"
-        app:layout_constraintStart_toStartOf="@+id/bookclub_book_home_members_tv" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/bookclub_book_home_members_rv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingStart="14dp"
+            android:paddingEnd="20dp"
+            android:clipToPadding="false"
+            app:layout_constraintTop_toBottomOf="@+id/bookclub_book_home_members_tv"
+            app:layout_constraintStart_toStartOf="parent"
+            android:orientation="horizontal" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/bookclub_book_home_month_rv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="14dp"
-        android:paddingEnd="20dp"
-        android:clipToPadding="false"
-        app:layout_constraintTop_toBottomOf="@+id/bookclub_book_home_month_tv"
-        app:layout_constraintStart_toStartOf="parent"
-        android:orientation="horizontal" />
+        <TextView
+            android:id="@+id/bookclub_book_home_month_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1월 북클럽"
+            android:textSize="16sp"
+            android:textColor="@color/colorLabelNormal"
+            android:layout_marginTop="41dp"
+            app:layout_constraintTop_toBottomOf="@+id/bookclub_book_home_members_rv"
+            app:layout_constraintStart_toStartOf="@+id/bookclub_book_home_members_tv" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/bookclub_book_home_month_rv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingStart="14dp"
+            android:paddingEnd="20dp"
+            android:clipToPadding="false"
+            app:layout_constraintTop_toBottomOf="@+id/bookclub_book_home_month_tv"
+            app:layout_constraintStart_toStartOf="parent"
+            android:orientation="horizontal" />
 
-<!--    <TextView-->
-<!--        android:id="@+id/bookclub_book_home_month_tv"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="1월"-->
-<!--        app:layout_constraintTop_toBottomOf="bookclub_book_home_members_rv"-->
-<!--        app:layout_constraintStart_toStartOf="bookclub_book_home_members_rv" />-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/bookclub_book_home_month_rv"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/bookclub_book_home_month_tv"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/bookclub_book_home_month_tv"-->
-<!--        android:orientation="horizontal" />-->
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
