--- a/app/src/main/res/layout/item_bookclub_book_members.xml
+++ b/app/src/main/res/layout/item_bookclub_book_members.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitCenter"
-            android:src="@drawable/img_member1"
+            android:src="@drawable/img_bookclub_member"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
