UI: bookclub place

--- a/app/src/main/res/drawable/btn_filter_bookcafe_selected.xml
+++ b/app/src/main/res/drawable/btn_filter_bookcafe_selected.xml
@@ -7,6 +7,7 @@
       android:pathData="M16,0.5L58,0.5A15.5,15.5 0,0 1,73.5 16L73.5,16A15.5,15.5 0,0 1,58 31.5L16,31.5A15.5,15.5 0,0 1,0.5 16L0.5,16A15.5,15.5 0,0 1,16 0.5z"
       android:fillColor="#989BA2"
       android:fillAlpha="0.16"/>
+  <!-- 테두리 추가 -->
   <path
       android:strokeWidth="1"
       android:pathData="M16,0.5L58,0.5A15.5,15.5 0,0 1,73.5 16L73.5,16A15.5,15.5 0,0 1,58 31.5L16,31.5A15.5,15.5 0,0 1,0.5 16L0.5,16A15.5,15.5 0,0 1,16 0.5z"
