--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,10 +3,12 @@
     <style name="Base.Theme.FE" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorControlActivated">@color/primary_50</item>
+        <!-- 상태바 색상 -->
+        <item name="android:statusBarColor">@color/black</item>
     </style>
 
     <style name="Theme.FE" parent="Base.Theme.FE" />
-
 
     <!-- Font style code -->
 
