--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -1,4 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <!-- 배경 색상 -->
+    <solid android:color="#232427" />
 
-</selector>
+    <!-- 테두리 색상과 두께 -->
+    <stroke
+        android:width="1dp"
+        android:color="#232427" />
+
+    <!-- 모서리 둥글기 -->
+    <corners android:radius="24dp" />
+
+    <!-- 패딩 (내부 여백) -->
+    <padding
+        android:left="15dp"
+        android:right="15dp"
+        android:top="10dp"
+        android:bottom="10dp" />
+
+</shape>
