--- a/app/src/main/res/layout/activity_bookclub_place.xml
+++ b/app/src/main/res/layout/activity_bookclub_place.xml
@@ -1,6 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#1B1C1E">
+
+    <TextView
+        android:id="@+id/bookclub_place_title_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:paddingBottom="20dp"
+        android:text="상월곡동"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/bookclub_place_arrow_down_ic"
+        android:layout_width="16dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/ic_arrow_down"
+        app:layout_constraintStart_toEndOf="@+id/bookclub_place_title_tv"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/bookclub_place_search_ic"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:src="@drawable/ic_magnifying_glass"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/bookclub_place_person_ic"
+        app:layout_constraintTop_toTopOf="@+id/bookclub_place_title_tv" />
+
+    <ImageView
+        android:id="@+id/bookclub_place_person_ic"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:src="@drawable/img_person_icon"
+        android:background="@drawable/circle_background"
+        android:scaleType="centerCrop"
+        android:clipToOutline="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/bookclub_place_search_ic"
+        app:layout_constraintBottom_toBottomOf="@+id/bookclub_place_search_ic" />
+
+    <FrameLayout
+        android:id="@+id/bookclub_place_frm"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/black_80"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bookclub_place_title_tv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
