--- a/app/src/main/res/layout/fragment_bookclub_place_filter_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bookclub_place_filter_bottom_sheet.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/black"
-    android:padding="20dp">
+    android:background="@drawable/background_bottom_sheet"
+    android:padding="10dp">
 
     <RadioGroup
         android:id="@+id/filter_radio_group"
@@ -13,20 +13,61 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <RadioButton
-            android:id="@+id/filter_recommendation_rb"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="추천순"
-            android:textColor="@color/white"
-            android:buttonTint="@color/primary_50" />
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginVertical="2dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp">
 
-        <RadioButton
-            android:id="@+id/filter_distance_rb"
+            <TextView
+                android:id="@+id/filter_recommendation_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="추천순"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:gravity="center_vertical" />
+
+<!--            색 적용안됨..-->
+            <RadioButton
+                android:id="@+id/filter_recommendation_rb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:buttonTint="@color/primary_50"
+                android:layout_gravity="end" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="거리순"
-            android:textColor="@color/white"
-            android:buttonTint="@color/primary_50" />
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginVertical="3dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp">
+
+            <TextView
+                android:id="@+id/filter_distance_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="거리순"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:gravity="center_vertical" />
+
+            <RadioButton
+                android:id="@+id/filter_distance_rb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:buttonTint="@color/primary_50"
+                android:layout_gravity="end" />
+        </LinearLayout>
+
     </RadioGroup>
+
 </LinearLayout>
