--- a/app/src/main/res/layout/item_bookclub_place_filter.xml
+++ b/app/src/main/res/layout/item_bookclub_place_filter.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@color/black_80"
+    android:background="@color/black"
     android:padding="15dp">
 
-    <TextView
-        android:id="@+id/place_filter_recommendation_tv"
+    <ImageView
+        android:id="@+id/place_filter_selected_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_filter_recommendation"
@@ -21,16 +21,16 @@
         android:paddingVertical="11dp"
         android:layout_marginStart="6dp" />
 
-    <TextView
-        android:id="@+id/place_filter_bookstore_tv"
+    <ImageView
+        android:id="@+id/place_filter_bookstore_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_filter_bookstore"
         android:padding="7dp"
         android:layout_marginStart="6dp" />
 
-    <TextView
-        android:id="@+id/place_filter_bookcafe_tv"
+    <ImageView
+        android:id="@+id/place_filter_bookcafe_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_filter_bookcafe"
