--- a/app/src/main/res/layout/item_bookclub_place_recent_search.xml
+++ b/app/src/main/res/layout/item_bookclub_place_recent_search.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/black">
+
+    <TextView
+        android:id="@+id/bookclub_place_recent_search_item_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="북카페"
+        android:textSize="13sp"
+        android:textColor="@color/white"
+        android:background="@drawable/rounded_recent_search"
+        android:paddingStart="16dp"
+        android:paddingEnd="32dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ImageView
+        android:id="@+id/bookclub_place_recent_search_delete_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_delete"
+        android:contentDescription="삭제 버튼"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="@+id/bookclub_place_recent_search_item_tv"
+        app:layout_constraintTop_toTopOf="@+id/bookclub_place_recent_search_item_tv"
+        app:layout_constraintBottom_toBottomOf="@+id/bookclub_place_recent_search_item_tv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
