--- a/app/src/main/res/layout/item_bookclub_recommended_place.xml
+++ b/app/src/main/res/layout/item_bookclub_recommended_place.xml
@@ -1,6 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@color/black"
+    android:padding="3dp">
+
+    <ImageView
+        android:id="@+id/item_bookclub_recommended_place_img"
+        android:layout_width="220dp"
+        android:layout_height="130dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/img_place1"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/item_bookclub_recommended_place_name_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:textSize="16sp"
+        android:text="인덱스숍"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="@id/item_bookclub_recommended_place_img"
+        app:layout_constraintTop_toBottomOf="@id/item_bookclub_recommended_place_img" />
+
+    <TextView
+        android:id="@+id/item_bookclub_recommended_place_tag_tv"
+        android:layout_width="45dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:background="@color/black"
+        android:padding="4dp"
+        android:text="카페"
+        android:textColor="@color/primary_50"
+        android:textSize="11sp"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="@id/item_bookclub_recommended_place_img"
+        app:layout_constraintBottom_toBottomOf="@id/item_bookclub_recommended_place_img" />
+
+    <ImageView
+        android:id="@+id/item_bookclub_recommended_place_star_ic"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="0dp"
+        android:padding="4dp"
+        android:src="@drawable/ic_star"
+        app:layout_constraintStart_toEndOf="@id/item_bookclub_recommended_place_name_tv"
+        app:layout_constraintTop_toBottomOf="@id/item_bookclub_recommended_place_img"
+        app:layout_constraintEnd_toStartOf="@id/item_bookclub_recommended_place_rating_tv"/>
+
+    <TextView
+        android:id="@+id/item_bookclub_recommended_place_rating_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="12dp"
+        android:text="4.8"
+        android:textColor="@color/white_50"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/item_bookclub_recommended_place_star_ic"
+        app:layout_constraintTop_toBottomOf="@id/item_bookclub_recommended_place_img" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
