--- a/app/src/main/res/layout/activity_bookclub_place_search.xml
+++ b/app/src/main/res/layout/activity_bookclub_place_search.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black">
 
@@ -86,6 +87,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="10dp"
+            android:paddingEnd="20dp"
             app:layout_constraintTop_toBottomOf="@id/bookclub_place_recent_search_tv"
             app:layout_constraintStart_toStartOf="@id/bookclub_place_search_main_layout" />
 
@@ -107,6 +109,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="10dp"
+            android:paddingEnd="20dp"
             app:layout_constraintTop_toBottomOf="@id/bookclub_recommended_place_tv"
             app:layout_constraintStart_toStartOf="@id/bookclub_place_search_main_layout" />
 
