--- a/app/src/main/res/layout/fragment_bookclub_place.xml
+++ b/app/src/main/res/layout/fragment_bookclub_place.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bookclub_place_frm"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1B1C1E">
+    android:background="@color/black">
 
     <TextView
         android:id="@+id/bookclub_place_title_tv"
@@ -54,7 +55,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/bookclub_place_search_ic" />
 
     <FrameLayout
-        android:id="@+id/bookclub_place_frm"
+        android:id="@+id/bookclub_place_list_frm"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/black_80"
