--- a/app/src/main/res/layout/activity_review_book.xml
+++ b/app/src/main/res/layout/activity_review_book.xml
@@ -21,7 +21,7 @@
             android:id="@+id/back_button"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/back_btn"
+            android:src="@drawable/ic_prev_arrow"
             android:contentDescription="뒤로가기"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" />
