--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PasswordResetActivity"
+    tools:context=".Login.PasswordResetActivity"
     android:background="@color/black">
 
     <ImageButton
