--- a/app/src/main/res/layout/activity_sign_up_name.xml
+++ b/app/src/main/res/layout/activity_sign_up_name.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpName"
+    tools:context=".SignUp.SignUpName"
     android:background="@color/black">
     <ImageButton
         android:id="@+id/back_button"
