--- a/app/src/main/res/layout/activity_sign_up_pw.xml
+++ b/app/src/main/res/layout/activity_sign_up_pw.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpPW"
+    tools:context=".SignUp.SignUpPW"
     android:background="@color/black">
 
     <ImageButton
