--- a/app/src/main/res/layout/activity_termsof_use.xml
+++ b/app/src/main/res/layout/activity_termsof_use.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TermsofUse"
+    tools:context=".SignUp.TermsofUse"
     android:background="@color/black">
 
         <!-- 뒤로 가기 버튼 -->
