--- a/app/src/main/res/layout/activity_sign_up_id.xml
+++ b/app/src/main/res/layout/activity_sign_up_id.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUp.SignUpID"
+    tools:context=".signup.SignUpID"
     android:exported="true"
     android:background="@color/black">
 
@@ -182,6 +182,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="68dp"
         android:background="@android:color/transparent"
+        android:src="@drawable/btn_next"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
